I-500 Change endpoint for creating specialization (#503)
* I-500 Change create specialization endpoint to set main mastery during creation